# chromium-function-demo

./: .gitignore  README.md  USE.md
blocked-request-system/: DATABASE_GUIDE.md  Makefile  README_TESTING.md  test_demo.sh
blocked-request-system/src/: blocked_request_db.cc  smart_batch_manager.cc
blocked-request-system/test/: quick_queries.sql  reader_program.cpp
blocked_request_system/: CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  USAGE.md
blocked_request_system/src/: blocked_request_db.h  smart_batch_manager.h
blocked_request_system/test/: create_test_data.cpp  simulate_browser.cpp  test_database.sh
designation-icon-demo/: README.md  package-lock.json  package.json  start-demo.sh
designation-icon-demo/src/: App.css  App.tsx
designation-icon-demo/src/components/: PoolIcon.tsx  PoolIconDemo.tsx
git-operator/: README.md  advanced-tricks.md  branch-strategy.md  patch-guide.md  workflow-best-practices.md
gn-build-example/: BUILD.gn  README.md  test_maxminddb.cc
gn-build-example/tool/: BUILD.gn  ip_checker.cc  ip_checker.h  main.cc
jiass-main-demo/: README.md
jiass-main-demo/react-version/: README.md  package-lock.json  package.json  test-app.js  test-network.sh  tsconfig.json  webpack.config.js
jiass-main-demo/react-version/src/: main.js
jiass-main-demo/react-version/src/renderer/: index.html  loading.html
jiass-main-demo/react-version/src/renderer/components/: BrowsersTab.tsx  GroupsTab.tsx  Header.tsx  NewProfileModal.tsx  ProfileCard.tsx  ProfileDetailModal.tsx  ProfilesTab.tsx  SettingsTab.tsx  Sidebar.tsx
jiass-main-demo/react-version/src/renderer/js/: App.tsx
jiass-main-demo/react-version/src/renderer/styles/: main.css
jiass-main-demo/vanilla-version/: LAYOUT_UPDATE_SUMMARY.md  WINDOW_SIZE_UPDATE_SUMMARY.md  package-lock.json  package.json  webpack.config.js
jiass-main-demo/vanilla-version/src/: main.js
jiass-main-demo/vanilla-version/src/renderer/: App.js  index.html
jiass-main-demo/vanilla-version/src/renderer/styles/: main.css
jiass-main-demo/vue-version/: README.md  index.html  package-lock.json  package.json  test-vue-app.js  vite.config.js
jiass-main-demo/vue-version/src/: main.cjs
jiass-main-demo/vue-version/src/renderer/: index.html
jiass-main-demo/vue-version/src/renderer/components/: BrowsersTab.vue  GroupsTab.vue  Header.vue  NewProfileModal.vue  ProfileCard.vue  ProfileDetailModal.vue  ProfilesTab.vue  SettingsTab.vue  Sidebar.vue
jiass-main-demo/vue-version/src/renderer/js/: App.vue  main.js
jiass-main-demo/vue-version/src/renderer/styles/: main.css
phd-game/: app.js  package-lock.json
phd-game/static/: index.html
